--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,26 @@ body {
     opacity: 0.5;
 }
 
+.selling_points {
+  list-style-type: none;
+  font-size: 20px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+
+.selling_points li {
+  margin-bottom: 20px;
+}
+
+.small_cta {
+  font-size: 20px;
+  line-height: 40px;
+  text-decoration: none;
+  font-weight: bold;
+  margin-right: 50px;
+}
+
+
 @-webkit-keyframes move {
   from {
     transform: translate(-100px, -50px) rotate(-90deg);
