--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,9 @@
 	margin: 0;
 	padding: 0;
 	font-family: "montserrat", sans-serif;
-    color: white;    
-    transition: 0.15s ease;
+  color: white;    
+  transition: 0.15s ease;
+  overflow-x: hidden;
 }
 
 body {
@@ -24,6 +25,7 @@ body {
     opacity: 0.4;
     z-index: 11;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .container {
@@ -47,8 +49,8 @@ body {
 
 .offerings h3 {
     font-size: 40px;
-    line-height: 160px;
     font-weight: 400;
+    padding-bottom: 40px;
 }
 
 .title {
@@ -66,7 +68,6 @@ body {
 }
 
 .blob {
-  padding: 100px;
   position: absolute;
   width: 700px;
   height: 500px;
@@ -103,18 +104,10 @@ body {
   width: auto;
 }
 
-.selling_points {
-  list-style-type: none;
+p {
   font-size: 20px;
-  margin-bottom: 20px;
-}
-
-.selling_points li {
-  margin-bottom: 30px;
-}
-
-.cta_container {
-  padding-top: 20px;
+  line-height: 40px;
+  padding-bottom: 40px;
 }
 
 .small_cta {
@@ -155,11 +148,13 @@ body {
   }
 
   .small_cta {
-    margin-right: 40px;
+    margin-right: 30px;
   }
 
   .blob {
-    max-height: 30vh;
+    animation: none;
+    -webkit-animation: none;
+    max-width: 100vw;
   }
 
   .hero {
