--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,16 @@ body {
 .offerings h3 {
     font-size: 40px;
     font-weight: 400;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
+    max-width: 850px;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: 300;
+  padding-bottom: 40px;
+  font-style: italic;
+  max-width: 850px;
 }
 
 .title {
@@ -108,6 +117,7 @@ p {
   font-size: 20px;
   line-height: 40px;
   padding-bottom: 40px;
+  max-width: 850px;
 }
 
 .small_cta {
