--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,25 @@
 
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	font-family: "montserrat", sans-serif;
-  color: white;    
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "montserrat", sans-serif;
+  color: white;
   transition: 0.15s ease;
   overflow-x: hidden;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #00001f;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 }
 
 .container {
-  min-height: 100vh;
   height: fit-content;
   width: 100%;
   display: flex;
@@ -25,10 +28,18 @@ body {
   align-items: center;
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
-.hero, .offerings, .cta, .contact-section {
+.hero,
+.offerings,
+.cta,
+.contact-section {
   z-index: 10;
+}
+
+.hero {
+  min-height: 100vh;
 }
 
 .contact-section h2 {
@@ -45,15 +56,15 @@ body {
 }
 
 .offerings {
-    width: 100%;
-    padding-left: 200px;
+  width: 100%;
+  padding-left: 200px;
 }
 
 .offerings h3 {
-    font-size: 40px;
-    font-weight: 400;
-    padding-bottom: 10px;
-    max-width: 850px;
+  font-size: 40px;
+  font-weight: 400;
+  padding-bottom: 10px;
+  max-width: 850px;
 }
 
 h4 {
@@ -75,34 +86,67 @@ h4 {
   font-size: 40px;
   margin-bottom: 2rem;
   font-weight: 650;
- 
+
 }
+
+/* -------------------- FOR THE ANIMATED BLOB ART BG --------------------------  */
 
 .blob {
-  position: absolute;
+  position: fixed;
   width: 700px;
   height: 500px;
-  background: #31136D59;
+  top: calc(50%);
+  left: calc(50%);
+  background: #31136D39;
+  filter: blur(250px);
   -webkit-filter: blur(250px);
-          filter: blur(250px);
-  -webkit-animation: move 15s infinite alternate;
-          animation: move 15s infinite alternate;
-  transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
+  animation: morph 60s infinite alternate;
+  -webkit-animation: morph 60s infinite alternate;
+  transition: border-radius 15s cubic-bezier(0.07, 0.8, 0.16, 1);
+  z-index: 1;
+  transform: translate(-50%, -50%);
 }
 
-.right-side {
-    right: 10px;
-    top: calc(50% - 250px);
+@-webkit-keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70% / 50% 60% 40% 50%;
+  }
+
+  50% {
+    border-radius: 30% 70% 50% 50% / 60% 40% 60% 40%;
+  }
+
+  100% {
+    border-radius: 40% 60% 70% 30% / 70% 50% 50% 60%;
+  }
 }
+
+@keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70% / 50% 60% 40% 50%;
+  }
+
+  50% {
+    border-radius: 30% 70% 50% 50% / 60% 40% 60% 40%;
+  }
+
+  100% {
+    border-radius: 40% 60% 70% 30% / 70% 50% 50% 60%;
+  }
+}
+
+/* ---------------------------------------------------------------  */
+
 
 .cta-button {
-    text-decoration: none;
-    font-size: 40px;
-    font-weight: 650;
+  text-decoration: none;
+  font-size: 40px;
+  font-weight: 650;
 }
 
-.cta-button:hover, .small_cta:hover {
-    opacity: 0.5;
+.cta-button:hover,
+.small_cta:hover {
+  opacity: 0.5;
 }
 
 .logo {
@@ -116,10 +160,37 @@ h4 {
   width: auto;
 }
 
+.nav-outer {
+  position: fixed;
+  background: #00001f88;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  width: 100%;
+  z-index: 11;
+  height: 72px;
+}
+
+.nav-inner {
+  display: flex;
+  margin: auto;
+}
+
+
+.nav-inner a {
+  font-size: 12px;
+  text-decoration: none;
+  margin: 10px 25px;
+  border-bottom: solid thin #00001f;
+  transition: 0.1s;
+}
+
+.nav-inner a:hover {
+  border-color: white;
+}
+
 p {
   font-size: 20px;
-  line-height: 40px;
-  padding-bottom: 40px;
+  line-height: 30px;
   max-width: 850px;
 }
 
@@ -128,7 +199,7 @@ li {
   font-size: 20px;
   line-height: 40px;
   max-width: 850px;
-  list-style-type:disc;
+  list-style-type: disc;
   margin-left: 30px;
   overflow-x: visible;
 }
@@ -140,38 +211,14 @@ li {
   margin-right: 50px;
 }
 
-
-@-webkit-keyframes move {
-  from {
-    transform: translate(-100px, -50px) rotate(-90deg);
-    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
-  }
-
-  to {
-    transform: translate(500px, 100px) rotate(-10deg);
-    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
-  }
-}
-
-@keyframes move {
-  from {
-    transform: translate(-10px, -5px) rotate(-90deg);
-    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
-  }
-
-  to {
-    transform: translate(-10px, -5px) rotate(-10deg);
-    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
-  }
-}
-
 @media only screen and (max-width: 1200px) {
   .contact-section h2 {
     font-size: 90%;
     line-height: 28px;
   }
 
-  li, .small_cta {
+  li,
+  .small_cta {
     font-size: 16px;
   }
 
@@ -193,7 +240,9 @@ li {
     font-size: 40px;
     margin-left: 0px;
   }
-  .subtitle, .offerings h3 {
+
+  .subtitle,
+  .offerings h3 {
     font-size: 20px;
   }
 
@@ -211,5 +260,5 @@ li {
     font-size: 40px;
   }
 
-  
+
 }
