--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/*------------------------------ Global Styling ---------------------------------*/
+
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
@@ -20,74 +22,6 @@ body {
   overflow-x: hidden;
 }
 
-.container {
-  height: fit-content;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-}
-
-.hero,
-.offerings,
-.cta,
-.contact-section {
-  z-index: 10;
-}
-
-.hero {
-  min-height: 100vh;
-}
-
-.contact-section h2 {
-  text-decoration: underline;
-}
-
-.contact-section h2:hover {
-  opacity: 0.5;
-  cursor: pointer;
-}
-
-.flex {
-  display: flex;
-}
-
-.offerings {
-  width: 100%;
-  padding-left: 200px;
-}
-
-.offerings h3 {
-  font-size: 40px;
-  font-weight: 400;
-  padding-bottom: 10px;
-  max-width: 850px;
-}
-
-h4 {
-  font-size: 20px;
-  font-weight: 300;
-  padding-bottom: 40px;
-  font-style: italic;
-  max-width: 850px;
-}
-
-.title {
-  font-size: 80px;
-  font-weight: 200;
-  margin-left: 128px;
-  margin-bottom: 20px;
-}
-
-.subtitle {
-  font-size: 40px;
-  margin-bottom: 2rem;
-  font-weight: 650;
-
-}
 
 /* -------------------- FOR THE ANIMATED BLOB ART BG --------------------------  */
 
@@ -135,8 +69,79 @@ h4 {
   }
 }
 
-/* ---------------------------------------------------------------  */
+/*------------------------------------------------------------------------------*/
 
+.container {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+.hero,
+.cta,
+.contact-section {
+  z-index: 10;
+}
+
+.contact {
+  border: solid thin #ffffff50;
+  width: fit-content;
+  height: fit-content;
+  padding: 20px;
+  margin: 20px;
+}
+
+.contact p {
+  cursor: pointer;
+}
+
+.contact p:hover {
+  text-decoration: underline;
+}
+
+.contact * {
+  margin: 10px;
+}
+
+.hero {
+  min-height: 100vh;
+}
+
+.contact-section h2:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.flex {
+  display: flex;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: 300;
+  padding-bottom: 40px;
+  font-style: italic;
+  max-width: 850px;
+}
+
+.title {
+  font-size: 80px;
+  font-weight: 200;
+  margin-left: 128px;
+  margin-bottom: 20px;
+}
+
+.subtitle {
+  font-size: 40px;
+  margin-bottom: 2rem;
+  font-weight: 650;
+
+}
 
 .cta-button {
   text-decoration: none;
@@ -147,17 +152,6 @@ h4 {
 .cta-button:hover,
 .small_cta:hover {
   opacity: 0.5;
-}
-
-.logo {
-  position: static;
-  display: flex;
-}
-
-.logo svg {
-  margin: auto;
-  height: 100px;
-  width: auto;
 }
 
 .nav-outer {
@@ -226,39 +220,43 @@ li {
     margin-right: 30px;
   }
 
-  .blob {
-    animation: none;
-    -webkit-animation: none;
-    max-width: 100vw;
-  }
-
   .hero {
     padding: 20px;
   }
 
   .title {
-    font-size: 40px;
+    font-size: 45px;
     margin-left: 0px;
   }
 
-  .subtitle,
-  .offerings h3 {
+  .subtitle {
     font-size: 20px;
-  }
-
-  .offerings h3 {
-    line-height: 80px;
-    font-weight: bold;
-
-  }
-
-  .offerings {
-    padding: 20px;
   }
 
   .cta-button {
     font-size: 40px;
   }
 
+  .nav-outer {
+    bottom: 0;
+    border-top: solid thin #ffffff50;
+  }
 
+  .nav-inner a {
+    padding: 0;
+    margin: 0px 8px;
+  }
+
+  .contact {
+    padding: 10px;
+  }
+
+  .contact svg {
+    display: none;
+  }
+
+  .contact p {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
