--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   font-family: "montserrat", sans-serif;
   color: white;
   transition: 0.15s ease;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 html {
@@ -139,12 +139,13 @@ h4 {
 .title {
   font-size: 80px;
   font-weight: 200;
-  margin-left: 128px;
+  text-align: center;
   margin-bottom: 20px;
 }
 
 .subtitle {
   font-size: 40px;
+  text-align: center;
   margin-bottom: 2rem;
   font-weight: 650;
 
@@ -213,6 +214,11 @@ li {
 }
 
 @media only screen and (max-width: 1200px) {
+  
+  .blob, .bgart {
+    display: none;
+  }
+
   .contact-section h2 {
     font-size: 90%;
     line-height: 28px;
